# splynx-tickets

./: .dockerignore  .gitignore  .mcp.json  ADMIN_PANEL_README.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_START.md  README.md  VPS_MONITORING.md  check_vps_status.sh  cliplin.yaml  create_admin_user.py  docker-compose.yml  pyproject.toml  run_migration.py  start_admin_panel.sh  stop_admin_panel.sh  sync_env_from_vps.sh
.claude/: claude.md  instructions.md
.claude/rules/: context-protocol-loading.md  context.md  feature-first-flow.md  feature-processing.md
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
afip/: AC_Raiz_Homo.pem  AC_Raiz_Homo_2014-2034.crt  TRA.cms  TRA.xml  cert.crt  cert_full.crt  pedido.csr  private.key  test.py
app/: __init__.py
app/interface/: interfaces.py  users.py  webhook_interface.py
app/models/: models.py
app/routes/: __init__.py  admin_routes.py  auth_routes.py  hooks_routes.py  logs_routes.py  splynx_webhooks.py  thread_functions.py  views.py  whatsapp_routes.py
app/schemas/: whatsapp_schemas.py
app/services/: evolution_api.py  parallel_multi_departamentos.py  selenium_multi_departamentos.py  splynx_services.py  splynx_services_singleton.py  ticket_manager.py  ticket_reopen_checker.py  tickets_process.py  webhook_processor.py  whatsapp_service.py
app/utils/: config.py  (+7 more)
app_smart_olt/: __init__.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
migrations/: add_schedule_type.sql  create_admin_tables.sql  create_users_table.sql
(+56 files in other folders)
